# wifi_down

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-run.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  scope.yaml  scope.yaml.example  wifi_auditor.py
.github/workflows/: ci.yml
data/: common_passwords.txt  router_defaults.yaml
locale/: ar.json  en.json  es.json  fr.json  hi.json  zh.json
modules/: __init__.py  banner.py  cracker.py  deauth.py  exceptions.py  fingerprint.py  ghost.py  handshake.py  historian.py  i18n.py  intercept.py  interface.py  logger.py  neural.py  oui.py  pattern_engine.py  phantom.py  pmkid.py  preflight.py  ratelimit.py  report.py  report_pdf.py  reporter.py  runner.py  scanner.py  scope.py  sequencer.py  state.py  temporal.py  utils.py  wep.py  wordlist.py  wps.py
tests/: test_banner.py  test_ghost.py  test_historian.py  test_hmac.py  test_i18n.py  test_neural.py  test_oui.py  test_phantom.py  test_preflight.py  test_router_defaults.py  test_runner.py  test_scope.py  test_temporal.py  test_version.py
wifi_auditor/: __init__.py  cli.py
