[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wifi-auditor"
version = "2.0.0"
description = "Automated WiFi security auditing framework for authorized penetration testing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5",
    "rich>=13",
    "pyyaml>=6",
    "cryptography>=41",
    "requests>=2.31",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
]

[project.scripts]
wifi-auditor = "wifi_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wifi_auditor*", "modules*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
